--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
@@ -53,5 +56,9 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
-  }
+  },
+  "description": "This project was generated using [Nx](https://nx.dev).",
+  "main": "jest.preset.js",
+  "keywords": [],
+  "author": ""
 }
