Connect Express and Postgres

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 3006
-USER = 'postgres'
-HOST = 'localhost'
-DATABASE = 'postgres'
-PASSWORd =  'mi.utm2020'
-PORT =5432
+PGUSER = 'neliken'
+PGHOST = 'localhost'
+PGDATABASE = 'postgres'
+PGPASSWORD =  'pswd4321'
+PGPORT = 5432
