--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.1.14",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
